--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "DarcInc",
   "license": "MIT",
   "devDependencies": {
-    "mocha": "^1.18.2"
+    "mocha": "^1.18.2",
+    "should": "^3.2.0-beta1"
   }
 }
